Rename some account server patches, misc small changes

--- a/environment/account.env
+++ b/environment/account.env
@@ -5,5 +5,5 @@ PN_ACT_CONFIG_MONGO_CONNECTION_STRING=mongodb://mongodb:27017/pretendo_account?r
 PN_ACT_CONFIG_MONGOOSE_OPTION_useNewUrlParser=true
 PN_ACT_CONFIG_MONGOOSE_OPTION_useUnifiedTopology=true
 PN_ACT_CONFIG_S3_ENDPOINT=http://minio:9000
-PN_ACT_CONFIG_CDN_BASE_URL=https://account-cdn.pretendo.cc
+PN_ACT_CONFIG_CDN_BASE_URL=https://cdn.pretendo.cc
 PN_ACT_CONFIG_GRPC_PORT=5000
