Add the Pretendo Network website server
Lots of patches here because the server crashes if Stripe, GitHub, Discord, etc. are not configured.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -17,6 +17,14 @@
                 "cwd": "${workspaceFolder}/repos/account"
             },
             "command": "npm install && npm run build"
+        },
+        {
+            "label": "Build website",
+            "type": "shell",
+            "options": {
+                "cwd": "${workspaceFolder}/repos/website"
+            },
+            "command": "npm install && npm run build"
         }
     ]
 }
