--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,6 +15,15 @@
                 "!**/node_modules/**"
             ],
             "port": 9229
+        },
+        {
+            "type": "node",
+            "request": "attach",
+            "name": "Debug website",
+            "preLaunchTask": "Build website",
+            "remoteRoot": "/app",
+            "localRoot": "${workspaceFolder}/repos/website",
+            "port": 9230
         }
     ]
 }
