Create setup scripts for containers

--- a/config/nginx/cdn.conf
+++ b/config/nginx/cdn.conf
@@ -4,6 +4,10 @@ server {
 
     set $upstream http://minio:9000;
     location / {
+        limit_except GET HEAD {
+            deny all;
+        }
+
         proxy_pass $upstream;
     }
 }
