--- a/environment/account.env
+++ b/environment/account.env
@@ -1,7 +1,7 @@
 GENERATE_NEW_KEYS=true
 PN_ACT_PREFER_ENV_CONFIG=true
 PN_ACT_CONFIG_HTTP_PORT=8080
-PN_ACT_CONFIG_MONGO_CONNECTION_STRING=mongodb://mongodb:27017/pretendo_account?replicaSet=rs&directConnection=true
+PN_ACT_CONFIG_MONGO_CONNECTION_STRING=mongodb://mongodb:27017/pretendo_account?replicaSet=rs
 PN_ACT_CONFIG_MONGOOSE_OPTION_useNewUrlParser=true
 PN_ACT_CONFIG_MONGOOSE_OPTION_useUnifiedTopology=true
 PN_ACT_CONFIG_S3_ENDPOINT=http://minio:9000
