Add a redirect to pretendo.cc

--- a/config/nginx/website.conf
+++ b/config/nginx/website.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name pretendo.network;
+    server_name pretendo.network www.pretendo.network;
 
     set $upstream http://website:8080;
     location / {
