Set up Minio S3 virtual hosts

--- a/config/nginx/cdn.conf
+++ b/config/nginx/cdn.conf
@@ -2,7 +2,7 @@ server {
     listen 80;
     server_name cdn.pretendo.cc;
 
-    set $upstream http://minio:9000;
+    set $upstream http://pn-cdn.minio:9000;
     location / {
         limit_except GET HEAD {
             deny all;
