--- a/environment/account.env
+++ b/environment/account.env
@@ -4,6 +4,9 @@ PN_ACT_CONFIG_HTTP_PORT=8080
 PN_ACT_CONFIG_MONGO_CONNECTION_STRING=mongodb://mongodb:27017/pretendo_account?replicaSet=rs
 PN_ACT_CONFIG_MONGOOSE_OPTION_useNewUrlParser=true
 PN_ACT_CONFIG_MONGOOSE_OPTION_useUnifiedTopology=true
+PN_ACT_CONFIG_WEBSITE_BASE=https://pretendo.network
+PN_ACT_CONFIG_REDIS_URL=redis://redis:6379
 PN_ACT_CONFIG_S3_ENDPOINT=http://minio:9000
 PN_ACT_CONFIG_CDN_BASE_URL=https://cdn.pretendo.cc
+PN_ACT_CONFIG_CDN_SUBDOMAIN=cdn
 PN_ACT_CONFIG_GRPC_PORT=5000
