Set up MailDev as a test mailserver

--- a/environment/account.env
+++ b/environment/account.env
@@ -9,4 +9,10 @@ PN_ACT_CONFIG_REDIS_URL=redis://redis:6379
 PN_ACT_CONFIG_S3_ENDPOINT=http://minio:9000
 PN_ACT_CONFIG_CDN_BASE_URL=https://cdn.pretendo.cc
 PN_ACT_CONFIG_CDN_SUBDOMAIN=cdn
+PN_ACT_CONFIG_EMAIL_HOST=maildev
+PN_ACT_CONFIG_EMAIL_PORT=1025
+PN_ACT_CONFIG_EMAIL_SECURE=false
+PN_ACT_CONFIG_EMAIL_USERNAME=pretendo_mail
+PN_ACT_CONFIG_EMAIL_PASSWORD=password
+PN_ACT_CONFIG_EMAIL_FROM="Pretendo Mail <pretendo_mail@maildev.pretendo.cc>"
 PN_ACT_CONFIG_GRPC_PORT=5000
