--- a/compose.yml
+++ b/compose.yml
@@ -32,6 +32,8 @@ services:
 
     nginx:
         image: nginx:mainline-alpine
+        depends_on:
+            - coredns
         ports:
             - 80:80
             - 443:443
@@ -49,6 +51,8 @@ services:
 
     mongodb:
         image: mongo:latest
+        depends_on:
+            - coredns
         ports:
             # For connecting with mongosh or MongoDB Compass
             - 127.0.0.1:27017:27017
@@ -66,6 +70,8 @@ services:
 
     minio:
         image: minio/minio:latest
+        depends_on:
+            - coredns
         ports:
             # Web console
             - 127.0.0.1:9090:9090
@@ -83,6 +89,8 @@ services:
 
     redis:
         image: redis:latest
+        depends_on:
+            - coredns
         volumes:
             - type: volume
               source: redis-data
@@ -92,13 +100,34 @@ services:
         networks:
             internal:
 
-    # TODO: Set up a SMTP server to log emails
+    maildev:
+        image: maildev/maildev:latest
+        depends_on:
+            - coredns
+        ports:
+            # MailDev web UI
+            - 127.0.0.1:1080:1080
+        volumes:
+            - type: volume
+              source: maildev-mail
+              target: /data
+        # We need to set the user to root so that MailDev can write to the volume.
+        user: root
+        env_file:
+            - ./environment/maildev.env
+        dns: 172.20.0.2
+        networks:
+            internal:
 
     account:
         build: ./repos/account
         depends_on:
+            - coredns
+            - nginx
             - mongodb
             - minio
+            - redis
+            - maildev
         ports:
             # For the Node.js debugger
             - 127.0.0.1:9229:9229
@@ -134,6 +163,7 @@ volumes:
     mongodb-database:
     minio-s3-data:
     redis-data:
+    maildev-mail:
     account-certificates:
 
 networks:
