Stop randomly generating the minio root username

--- a/compose.yml
+++ b/compose.yml
@@ -50,6 +50,7 @@ services:
             internal:
 
     mongodb:
+        # TODO: Set up authentication
         image: mongo:latest
         ports:
             # For connecting with mongosh or MongoDB Compass
