--- a/environment/account.env
+++ b/environment/account.env
@@ -7,6 +7,7 @@ PN_ACT_CONFIG_MONGOOSE_OPTION_useUnifiedTopology=true
 PN_ACT_CONFIG_WEBSITE_BASE=https://pretendo.network
 PN_ACT_CONFIG_REDIS_URL=redis://redis:6379
 PN_ACT_CONFIG_S3_ENDPOINT=http://minio:9000
+PN_ACT_CONFIG_S3_ACCESS_KEY=minio_pretendo
 PN_ACT_CONFIG_CDN_BASE_URL=https://cdn.pretendo.cc
 PN_ACT_CONFIG_CDN_SUBDOMAIN=cdn
 PN_ACT_CONFIG_EMAIL_HOST=maildev
