--- a/compose.yml
+++ b/compose.yml
@@ -153,8 +153,8 @@ services:
             - ./environment/account.env
             - ./environment/account.local.env
         volumes:
-            - type: volume
-              source: account-certificates
+            - type: bind
+              source: ./certs
               target: /app/certs
         dns: 172.20.0.2
         networks:
