Create datastore certs in dockerfile

--- a/patches/account/dockerfile-update.patch
+++ b/patches/account/dockerfile-update.patch
@@ -1,8 +1,8 @@
 diff --git i/Dockerfile w/Dockerfile
-index a810a90..3f73456 100644
+index a810a90..c119a69 100644
 --- i/Dockerfile
 +++ w/Dockerfile
-@@ -1,16 +1,13 @@
+@@ -1,16 +1,14 @@
 -FROM node:18-alpine
 +FROM node:20-alpine
  
@@ -17,6 +17,7 @@ index a810a90..3f73456 100644
  
  COPY . ./
 +RUN npm run build
++RUN node generate-certs.js nex datastore
  
 -VOLUME [ "/app/config.json", "/app/certs" ]
 +VOLUME [ "/app/certs" ]
