--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
         {
             "label": "Start Docker Compose",
             "type": "shell",
-            "command": "docker-compose up -d --build",
+            "command": "docker compose up -d --build --pull always",
             "group": {
                 "kind": "build",
                 "isDefault": true
