Fix a typo in the account dockerfile

--- a/patches/account/dockerfile-update.patch
+++ b/patches/account/dockerfile-update.patch
@@ -1,5 +1,5 @@
 diff --git i/Dockerfile w/Dockerfile
-index a810a90..c119a69 100644
+index a810a90..49d3fa5 100644
 --- i/Dockerfile
 +++ w/Dockerfile
 @@ -1,16 +1,14 @@
@@ -17,7 +17,7 @@ index a810a90..c119a69 100644
  
  COPY . ./
 +RUN npm run build
-+RUN node generate-certs.js nex datastore
++RUN node generate-keys.js nex datastore
  
 -VOLUME [ "/app/config.json", "/app/certs" ]
 +VOLUME [ "/app/certs" ]
