--- a/compose.yml
+++ b/compose.yml
@@ -241,6 +241,45 @@ services:
             - ./environment/friends.env
             - ./environment/friends.local.env
 
+    miiverse-api:
+        build: ./repos/miiverse-api
+        depends_on:
+            - account
+            - mongodb
+            - friends
+        restart: unless-stopped
+        ports:
+            # For the Node.js debugger
+            - 127.0.0.1:9231:9231
+        networks:
+            internal:
+        dns: 172.20.0.200
+        env_file:
+            - ./environment/miiverse-api.env
+            - ./environment/miiverse-api.local.env
+
+    juxtaposition-ui:
+        # TODO: Figure out how to create communities
+        build: ./repos/juxtaposition-ui
+        depends_on:
+            - account
+            - mongodb
+            - friends
+        restart: unless-stopped
+        ports:
+            # For the Node.js debugger
+            - 127.0.0.1:9232:9232
+        volumes:
+            - type: bind
+              source: ./config/juxtaposition-config.js
+              target: /app/config.js
+        networks:
+            internal:
+        dns: 172.20.0.200
+        env_file:
+            - ./environment/juxtaposition-ui.env
+            - ./environment/juxtaposition-ui.local.env
+
     wiiu-chat-authentication:
         build: ./repos/wiiu-chat-authentication
         depends_on:
