--- a/compose.yml
+++ b/compose.yml
@@ -153,6 +153,9 @@ services:
         depends_on:
             - coredns
         restart: unless-stopped
+        ports:
+            # For connecting with pgAdmin
+            - 127.0.0.1:5432:5432
         volumes:
             - type: volume
               source: postgres-database
